--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>Migration tools for Azure Spring</description>
 	<properties>
 		<java.version>17</java.version>
-		<spring-shell.version>2.1.4</spring-shell.version>
+		<spring-shell.version>2.1.2</spring-shell.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -41,6 +41,10 @@
 			<groupId>org.openrewrite</groupId>
 			<artifactId>rewrite-java-11</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
@@ -68,18 +72,25 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>repackage</id>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<requiresUnpack>
+								<dependency>
+									<groupId>org.asciidoctor</groupId>
+									<artifactId>asciidoctorj</artifactId>
+								</dependency>
+							</requiresUnpack>
+							<mainClass>com.azure.spring.migrationtools.MigrationToolsApplication</mainClass>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>spring-release</id>
-			<name>Spring release</name>
-			<url>https://repo.spring.io/release</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
 
 </project>
